--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Relevamiento Visual</title>
 
   <base href="/" />
 
@@ -12,14 +12,14 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
 
-  <link rel="icon" type="image/png" href="assets/icon/relevamiento_visual_icono.png" />
+  <link rel="icon" type="image/png" href="./assets/relevamiento_visual_transparente.png" />
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
 
-<body>
+<body class="background-image">
   <app-root></app-root>
 </body>
 
